Page MenuHome GnuPG

Kleopatra: Wrong color for disabled text, links, and tool tips with high contrast modes
Closed, ResolvedPublic

Description

With the dark high contrast modes disabled text, links, and tool tips use the wrong color. I tested this on Windows 10 with high contrast mode No. 1. (For disabled text and links we have custom code in Kleopatra which sets the correct colors once on start-up, but this breaks when the user switches the color scheme.)

Windows uses white text on black with white frame:

Event Timeline

ikloecker created this task.
ikloecker renamed this task from Kleopatra: Wrong color for tool tips with high contrast modes to Kleopatra: Wrong color for disabled text, links, and tool tips with high contrast modes.Apr 7 2025, 9:46 AM
ikloecker updated the task description. (Show Details)

Fixed. If high-contrast is active then tool tips now use the same colors as buttons (e.g. white text on black for Kontrast No. 1).

Moreover, the colors for disabled text, links, and tool tips are now always correct even if one activates/deactivates high-contrast and/or switches the color scheme.

ikloecker changed the task status from Open to Testing.Jun 24 2025, 12:04 PM
ikloecker moved this task from WIP to QA on the gpd5x board.

Setting to Testing.

Note for testing:
This ticket is mostly about verifying that the colors defined by the high-contrast color schemes are used for disabled text (of menu entries, buttons, etc.), links, and tool tips after starting Kleopatra. Problems with on-the-fly adjustment of the colors when the colors are changed while Kleopatra is running are dealt with in T7610: Kleopatra: Update custom colored UI elements when colors change.

Shouldn't the enabled close button in win10 / disabled text / nr2 have green color? (it's the "search certs on server" dialog).

Everything else looks good to me on gpg4win-5.0.0-beta336 @ win10/win11

win10
  • disabled text
nr1
nr2
black
white
  • links
nr1
nr2
black
white
  • tooltips
nr1
nr2
black
white
win11
  • disabled text
abenddämmerung
nachthimmel
wasser
wüste
  • links
abenddämmerung
nachthimmel
wasser
wüste
  • tooltips
abenddämmerung
nachthimmel
wasser
wüste

Shouldn't the enabled close button in win10 / disabled text / nr2 have green color? (it's the "search certs on server" dialog).

The button text color for win10 Contrast No.2 is white. Green is used for text (except button text). If anything then the green x should also be white.

(Looking at Windows apps it feels a bit random for which UI elements the button text color is used and for which UI elements the normal text color is used.)

I guess, that's ok then, moving this to done.

ikloecker mentioned this in Unknown Object (Maniphest Task).Sep 22 2025, 9:55 AM