Ensure correct high-contrast palette on Windows

Patches the application palette whenever it was changed and high-contrast
is active on Windows. This makes sure that Kleopatra uses the correct colors
for links, tool tips, and disabled text.

GnuPG-bug-id: 7594